<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="919dp"

        android:layout_marginBottom="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="616dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="355dp"
            tools:layout_editor_absoluteY="71dp">

            <LinearLayout
                android:id="@+id/parent_layout"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="#fff"
                android:orientation="horizontal"
                android:padding="8dp"
                tools:layout_editor_absoluteX="493dp"
                tools:layout_editor_absoluteY="70dp">

                <ImageView
                    android:id="@+id/imgCompte"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:contentDescription="Avatar" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtCouriel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtPoints"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtCredits"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtGroupe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtRole"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnMsgPrive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Message Privé" />

                <Button
                    android:id="@+id/btnMsgPublique"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Message Publique"
                    android:textSize="14sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/txtTitreDerniereCommande"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="État de la dernière commande"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txtDerniereCommande"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/txtTitrePrive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Messages privés"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txtMsgPrive"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtTitrePublique"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Messages publiques"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txtMsgPublique"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />


            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/endroitCombattant"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/ailleurs" />

                    <RadioButton
                        android:id="@+id/radioButton3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/attente" />

                    <RadioButton
                        android:id="@+id/radioButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/spectateur" />

                </RadioGroup>


                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/arbitre"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerArbitre" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/txtAilleurs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Liste ailleurs"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/txtArbitres"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Liste arbitres"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recyclerAilleurs"
                        android:layout_width="357dp"
                        android:layout_height="140dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.466"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/checkBox">

                    </android.support.v7.widget.RecyclerView>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recyclerArbitre"
                        android:layout_width="357dp"
                        android:layout_height="140dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.466"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/recyclerSpectateur">

                    </android.support.v7.widget.RecyclerView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/txtAttentes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Liste en attente"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/txtSpectateur"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Liste spectateurs"
                        android:textAlignment="center" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recyclerAttente"
                        android:layout_width="357dp"
                        android:layout_height="140dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/endroitCombattant" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recyclerSpectateur"
                        android:layout_width="357dp"
                        android:layout_height="140dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/recyclerAttente">

                    </android.support.v7.widget.RecyclerView>
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/LinearLayoutCombat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintTop_toBottomOf="@+id/scrollView2">

                <Button
                    android:id="@+id/btnCombat1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnCombat1" />


                <Button
                    android:id="@+id/btnCombat2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnCombat2" />

                <Button
                    android:id="@+id/btnCombat3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnCombat3" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayoutArbitre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintTop_toBottomOf="@+id/scrollView2">

                <Button
                    android:id="@+id/btnArbitrer1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnArbitrer1" />


                <Button
                    android:id="@+id/btnArbitrer2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnArbitrer2" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayoutExamen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintTop_toBottomOf="@+id/scrollView2">

                <Button
                    android:id="@+id/btnExamen1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnExamen1" />


                <Button
                    android:id="@+id/btnExamen2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnExamen2" />

            </LinearLayout>

            <Button
                android:id="@+id/btnAncien"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnAncien" />

            <Button
                android:id="@+id/btnDeconnexion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnDeconnexion" />


        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>